@@ -2,6 +2,8 @@ LIST OF CHANGES
 ---------------
 
  - add log archiver to the end of the archival pipeline
+ - use outgoing paths for jobs which are run after the run_qc_complete
+   function
 
 release 52.0.4
  - bug fix: change path for a file with LSF commands to a path in
